kubernetes/40-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: overengineer-frontend
  labels:
spec:
  rules:
    - host: "overengineer.wtf"
      http:
        paths:
          - path: /
            backend:
              serviceName: overengineer-frontend
              servicePort: 80
